style: prevent hover behavior on mobile browsers for PowerUpButton & XOSquare buttons

--- a/src/components/XOGame/PowerUps/PowerUpButton/PowerUpButton.module.scss
+++ b/src/components/XOGame/PowerUps/PowerUpButton/PowerUpButton.module.scss
@@ -44,7 +44,7 @@
 }
 
 @media (hover: none) and (pointer: coarse) {
-  .powerUp:not(:disabled):hover {
+  .powerUp:not(:disabled, .selected):hover {
     background-color: initial;
     border-color: initial;
     box-shadow: none;
