--- a/src/components/XOGame/XOBoard/XOSquare/XOSquare.module.scss
+++ b/src/components/XOGame/XOBoard/XOSquare/XOSquare.module.scss
@@ -73,6 +73,14 @@
   }
 }
 
+@media (hover: none) and (pointer: coarse) {
+  .square:not(:disabled):hover {
+    background: initial;
+    border-color: initial;
+    box-shadow: none;
+  }
+}
+
 .freeze {
   position: absolute;
   inset: 0;
